# Media-Sharing-App

./: .gitignore  README.md  pyproject.toml
app/: app.py  db.py  images.py  users.py
frontend-react/: package-lock.json  package.json
frontend-react/public/: index.html
frontend-react/src/: App.css  App.js
frontend-react/src/components/: Feed.js  Login.js  UploadPage.js
frontend-react/src/utils/: api.js
